feat(chat): 优化RAG系统性能与功能
- 添加环境变量配置模板和Git忽略规则
- 实现批量消息轨迹查询接口提升链路追踪效率
- 配置数据库连接池参数优化资源管理
- 调整日志级别避免生产环境磁盘I/O过载
- 设置遥测数据摘要限制防止服务崩溃
- 重构百炼重排序客户端实现独立超时控制
- 添加图片描述并行预生成功能提升处理速度
- 增加块级内容清洗组件去除解析噪声
- 实现BM25关键词搜索的集合过滤功能
- 扩展前端API支持分页加载和引用溯源
- 优化检索执行器线程池配置提升并发性能
- 添加流式响应落库虚拟线程执行器