@@ -1,14 +1,16 @@
 package com.nageoffer.ai.rag.chat.postprocessor;
 
+import com.jjx.ai.llmobservability.observation.annotation.TelemetryStep;
 import com.nageoffer.ai.rag.chat.rerank.RerankClient;
 import com.nageoffer.ai.rag.chat.retrieval.RetrievedChunk;
 import com.nageoffer.ai.rag.chat.retrieval.SearchChannelResult;
 import com.nageoffer.ai.rag.chat.retrieval.SearchContext;
-import java.util.List;
+import com.nageoffer.ai.rag.config.properties.ChatProperties;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnBean;
 import org.springframework.stereotype.Component;
-import com.jjx.ai.llmobservability.observation.annotation.TelemetryStep;
+
+import java.util.List;
 
 /**
  * Rerank 精排处理器（责任链第三环）。
@@ -27,13 +29,15 @@ import com.jjx.ai.llmobservability.observation.annotation.TelemetryStep;
 public class RerankPostProcessor implements SearchResultPostProcessor {
 
     private final RerankClient rerankClient;
+    private final ChatProperties chatProperties;
 
-    public RerankPostProcessor(List<RerankClient> rerankClients) {
+    public RerankPostProcessor(List<RerankClient> rerankClients, ChatProperties chatProperties) {
         // 优先使用非 noop 的客户端
         this.rerankClient = rerankClients.stream()
                 .filter(c -> !"noop".equals(c.provider()))
                 .findFirst()
-                .orElse(rerankClients.isEmpty() ? null : rerankClients.get(0));
+                .orElse(rerankClients.isEmpty() ? null : rerankClients.getFirst());
+        this.chatProperties = chatProperties;
     }
 
     @Override
@@ -70,9 +74,22 @@ public class RerankPostProcessor implements SearchResultPostProcessor {
         long t0 = System.currentTimeMillis();
         List<RetrievedChunk> reranked = rerankClient.rerank(query, chunks, topK);
 
-        log.info("[Rerank] 输入={}, 输出={}, 耗时={}ms", chunks.size(), reranked.size(),
+        // 阈值过滤（可选，rag.chat.rerank-score-threshold=0 关闭）：精排后低相关块不进上下文，
+        // 宁喂少量精品不喂掺沙——top5 里 4/5 无关块会稀释注意力（liveRag eval precision@5≈0.22 的教训）
+        double threshold = chatProperties.getRerankScoreThreshold();
+        List<RetrievedChunk> filtered = reranked;
+        if (threshold > 0) {
+            filtered = reranked.stream()
+                    .filter(c -> c.getScore() == null || c.getScore() >= threshold)
+                    .toList();
+            if (filtered.size() < reranked.size()) {
+                log.info("[Rerank] 阈值过滤({}): {} → {} 条", threshold, reranked.size(), filtered.size());
+            }
+        }
+
+        log.info("[Rerank] 输入={}, 输出={}, 耗时={}ms", chunks.size(), filtered.size(),
                 System.currentTimeMillis() - t0);
 
-        return reranked;
+        return filtered;
     }
 }
